[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/characters/Ina.png" type="Texture" id=1]
[ext_resource path="res://src/player/Player.gd" type="Script" id=2]
[ext_resource path="res://shared/input/PlayerInput.gd" type="Script" id=3]
[ext_resource path="res://assets/light-smooth.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/walk.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/player-land.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/player-jump.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 11 )

[sub_resource type="Animation" id=1]
resource_name = "Fall"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 10, 0 ), Vector2( 11, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 8, 0 ), Vector2( 9, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ), Vector2( 7, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 12, 0 ), Vector2( 13, 0 ), Vector2( 14, 0 ), Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
acceleration = 2000
speed = 100

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )
hframes = 15
vframes = 2
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fall = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/RESET = SubResource( 6 )
anims/Run = SubResource( 5 )
anims/Slide = SubResource( 8 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.3
energy = 0.3

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 2.0
pitch_scale = 1.5

[node name="LandSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[connection signal="just_pressed" from="PlayerInput" to="." method="_on_PlayerInput_just_pressed"]
[connection signal="just_released" from="PlayerInput" to="." method="_on_PlayerInput_just_released"]
